--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://linkedin.com/in/anozie-u-chibuikem"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Baronchibuikem"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://twitter.com/awesomebaron"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://github.com/Baronchibuikem"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://twitter.com/codewithbaron"><i class="fab fa-twitter"></i></a>
+                        <!-- <a class="social-icon" href="https://github.com/Baronchibuikem"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -130,7 +130,7 @@
                             </div>                            
                         </div>
 
-                        <div class="col-md-4 col-sm-12 ">
+                        <!-- <div class="col-md-4 col-sm-12 ">
                             <div class="card text-left shadow">
                                 <img class="card-img-top" src="{% static 'assets/img/openHISA.PNG' %}" alt="">
                                 <div class="card-body">
@@ -140,6 +140,20 @@
                                         It provides you with access to a variety of health plans, crafted to meet your health financing needs.
                                     </p>
                                     <p><a href="http://104.225.217.155:8350/">Visit site</a>     
+                                </div>
+                            </div>
+                            
+                        </div> -->
+                        <div class="col-md-4 col-sm-12 ">
+                            <div class="card text-left shadow">
+                                <img class="card-img-top" src="{% static 'assets/img/datakojo.png' %}" alt="">
+                                <div class="card-body mt-4">
+                                    <h4 class="card-title">Datakojo</h4>
+                                    <p class="card-text">
+                                        DataKojo is a flexible yet sophisticated mobile data collection platform used for surveys and research for conducting online 
+                                        surveys built using Django and Celery for background tasks.
+                                    </p>
+                                    <p><a href="https://datakojo.com/">Visit site</a>     
                                 </div>
                             </div>
                             
