added more projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
                                 <li><i class="fas fa-angle-right"></i> Vuex</li>
                                 <li><i class="fas fa-angle-right"></i> Node</li>
                                 <li><i class="fas fa-angle-right"></i> Express</li>
-                                <li><i class="fas fa-angle-right"></i> Graphql and Apollo-client</li>
+                                <li><i class="fas fa-angle-right"></i> Apollo/Client</li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-sm-12">
@@ -130,7 +130,7 @@
                             </div>                            
                         </div>
 
-                        <!-- <div class="col-md-4 col-sm-12 ">
+                        <div class="col-md-4 col-sm-12 ">
                             <div class="card text-left shadow">
                                 <img class="card-img-top" src="{% static 'assets/img/openHISA.PNG' %}" alt="">
                                 <div class="card-body">
@@ -138,28 +138,65 @@
                                     <p class="card-text">
                                         OpenHISA is a platform built to improve citizen’s access to quality healthcare that is reliable. 
                                         It provides you with access to a variety of health plans, crafted to meet your health financing needs.
+                                        <!-- This application was built with Django and Vue -->
                                     </p>
                                     <p><a href="http://104.225.217.155:8350/">Visit site</a>     
                                 </div>
                             </div>
                             
-                        </div> -->
+                        </div>
                         <div class="col-md-4 col-sm-12 ">
                             <div class="card text-left shadow">
-                                <img class="card-img-top" src="{% static 'assets/img/datakojo.png' %}" alt="">
+                                <img class="card-img-top" src="{% static 'assets/img/exaltify.png' %}" alt="">
                                 <div class="card-body mt-4">
-                                    <h4 class="card-title">Datakojo</h4>
+                                    <h4 class="card-title">Exaltify</h4>
                                     <p class="card-text">
-                                        DataKojo is a flexible yet sophisticated mobile data collection platform used for surveys and research for conducting online 
-                                        surveys built using Django and Celery for background tasks.
+                                        Exaltify is a multi-tenant church application
+                                        for users to share testimonies and make
+                                        offerings, and also dashboard for the church to
+                                        manage its users and also share
+                                        sermons, devotions etc.
                                     </p>
-                                    <p><a href="https://datakojo.com/">Visit site</a>     
+                                    <p><a href="https://exaltify.com.ng/">Visit site</a>     
                                 </div>
                             </div>
                             
                         </div>
 
-                        <div class="col-md-4 col-sm-12 ">
+                        <div class="col-md-4 col-sm-12 mt-3">
+                            <div class="card text-left shadow">
+                                <img class="card-img-top" src="{% static 'assets/img/jotternote.png' %}" alt="">
+                                <div class="card-body mt-4">
+                                    <h4 class="card-title">Jotternote</h4>
+                                    <p class="card-text">
+                                        Developed the full application with Express and React to be a note taking application,
+                                        where user's can save their note, have quick access to it and properly sort them into
+                                        categories
+                                    </p>
+                                    <p><a href="http://jotternote.herokuapp.com">Visit site</a>     
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                        <div class="col-md-4 col-sm-12 mt-3">
+                            <div class="card text-left shadow">
+                                <img class="card-img-top" src="{% static 'assets/img/apartment.PNG' %}" alt="">
+                                <div class="card-body mt-4">
+                                    <h4 class="card-title">EmpireHousings</h4>
+                                    <p class="card-text">
+                                        Developed to be your one stop to buying landed house properties with a taste of quality
+                                        and at same time very affordable. This application was built with Django and React
+                                    </p>
+                                    <p><a href="http://housingpartments.herokuapp.com">Visit site</a>     
+                                </div>
+                            </div>
+                            
+                        </div>
+
+                        
+
+                        <div class="col-md-4 col-sm-12 mt-3">
                             <div class="card text-left shadow">
                               <img class="card-img-top" src="{% static 'assets/img/poll.PNG' %}" alt="">
                               <div class="card-body">
