update: Remodeled the whole platform

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	{% load static %}
 	{% load crispy_forms_tags %}
-    {% block title %}Portolio- Baron Chibuikem {% endblock title %}</title>
+    <title>{% block title %} Portolio- Baron Chibuikem {% endblock title %}</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
 <body>
     
     <header class="header text-center layout-view">	    
-	    <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Baron's Blog</a></h1>
+	    <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Baron's Profile</a></h1>
         
 	    <nav class="navbar navbar-expand-lg navbar-dark" >
            
