update: modified index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,6 @@
 		</nav>
     </header>
     
-    <div class="main-wrapper">
 		{% block section %}
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center">
@@ -106,7 +105,7 @@
 		   
 	    </footer>
     
-    </div><!--//main-wrapper-->
+  <!--//main-wrapper-->
     
     
        
